# pyconjp_2020_minishizuoka_2020

./: .gitignore  Makefile  pyproject.toml  some_sns_module.py
.github/workflows/: main.yaml
src/: greet.py  kuji.py  picnic.py  sample.py  sns.py
src/calculate/: calculate_1.py  calculate_2.py  calculate_3.py
tests/: test_greet.py  test_kuji.py  test_picnic.py  test_sample.py  test_sns.py
tests/calculate/: test_calculate_1.py  test_calculate_2.py  test_calculate_3.py
