[tool.poetry]
name = "pycon_shizu_2020"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
flake8 = "^3.7.9"
pylint = "^2.4.4"
responses = "^0.10.11"
freezegun = "^0.3.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
